@@ -39,6 +39,7 @@ require "settings-updates/bobplates"
 require "settings-updates/bobpower"
 require "settings-updates/bobrevamp"
 require "settings-updates/bobtech"
+require "settings-updates/cargo-ships"
 require "settings-updates/reskins-angels"
 require "settings-updates/ScienceCostTweakerM"
 require "settings-updates/SpaceMod"
