@@ -19,6 +19,7 @@ Date: ???
     - Reverted Polishing wheel to require Wood rather than Wood pellets
     - Reverted Protective scaffolding to require Wood rather than Wood bricks
     - Removed override of Bob's furnaces as this has been implemented in Angel's
+    - Disable and hide deep oil settings of cargo ships mod
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
